--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 
 <body>
 
+
+  <section class="screen">
+    <h1>Calculator</h1>
+    <div class="screen_calc">
+      <span class="screen-num1">10</span>
+      <span class="screen-operation">x</span>
+      <span class="screen-num2">2</span>
+    </div>
+    <div class="screen_result"><span>=</span><span class="screen_result">20</span></div>
+  </section>
+  <section class="calc">
+    <div class="calc_clear"><span>C</span></div>
+    <div class="calc_0 calc_namber"><span>0</span></div>
+    <div class="calc_dot calc_namber"><span>.</span></div>
+    <div class="calc_addition calc_operation"><span>+</span></div>
+    <div class="calc_subtraction calc_operation"><span>-</span></div>
+    <div class="calc_multiplication calc_operation"><span>x</span></div>
+    <div class="calc_division calc_operation"><span>/</span></div>
+    <div class="calc_1 calc_namber"><span>1</span></div>
+    <div class="calc_2 calc_namber"><span>2</span></div>
+    <div class="calc_3 calc_namber"><span>3</span></div>
+    <div class="calc_4 calc_namber"><span>4</span></div>
+    <div class="calc_5 calc_namber"><span>5</span></div>
+    <div class="calc_6 calc_namber"><span>6</span></div>
+    <div class="calc_7 calc_namber"><span>7</span></div>
+    <div class="calc_8 calc_namber"><span>8</span></div>
+    <div class="calc_9 calc_namber"><span>9</span></div>
+    <div class="calc_equal"><span>=</span></div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
