--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
     </div>
     <div class="screen_result"><span>=</span><span class="screen_result">20</span></div>
   </section>
-  <section class="calc">
-    <div class="calc_clear"><span>C</span></div>
-    <div class="calc_0 calc_namber"><span>0</span></div>
-    <div class="calc_dot calc_namber"><span>.</span></div>
-    <div class="calc_addition calc_operation"><span>+</span></div>
-    <div class="calc_subtraction calc_operation"><span>-</span></div>
-    <div class="calc_multiplication calc_operation"><span>x</span></div>
-    <div class="calc_division calc_operation"><span>/</span></div>
-    <div class="calc_1 calc_namber"><span>1</span></div>
-    <div class="calc_2 calc_namber"><span>2</span></div>
-    <div class="calc_3 calc_namber"><span>3</span></div>
-    <div class="calc_4 calc_namber"><span>4</span></div>
-    <div class="calc_5 calc_namber"><span>5</span></div>
-    <div class="calc_6 calc_namber"><span>6</span></div>
-    <div class="calc_7 calc_namber"><span>7</span></div>
-    <div class="calc_8 calc_namber"><span>8</span></div>
-    <div class="calc_9 calc_namber"><span>9</span></div>
-    <div class="calc_equal"><span>=</span></div>
+  <section class="calc buttons">
+    <button class="calc_clear"><span>C</span></button>
+    <button class="calc_0 calc_namber" data-value="0"><span>0</span></button>
+    <button class="calc_dot calc_namber" data-value="."><span>.</span></button>
+    <button class="calc_addition calc_operation" data-value="+"><span>+</span></button>
+    <button class="calc_subtraction calc_operation" data-value="-"><span>-</span></button>
+    <button class="calc_multiplication calc_operation" data-value="*"><span>x</span></button>
+    <button class="calc_division calc_operation" data-value="/"><span>/</span></button>
+    <button class="calc_1 calc_namber" data-value="1"><span>1</span></button>
+    <button class="calc_2 calc_namber" data-value="2"><span>2</span></button>
+    <button class="calc_3 calc_namber" data-value="3"><span>3</span></button>
+    <button class="calc_4 calc_namber" data-value="4"><span>4</span></button>
+    <button class="calc_5 calc_namber" data-value="5"><span>5</span></button>
+    <button class="calc_6 calc_namber" data-value="6"><span>6</span></button>
+    <button class="calc_7 calc_namber" data-value="7"><span>7</span></button>
+    <button class="calc_8 calc_namber" data-value="8"><span>8</span></button>
+    <button class="calc_9 calc_namber" data-value="9"><span>9</span></button>
+    <button class="calc_equal" data-value="="><span>=</span></button>
   </section>
 
   <script src="script.js"></script>
