calculator foncionalty and display in the html

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <section class="screen">
     <h1>Calculator</h1>
     <div class="screen_calc">
-      10
+      0
     </div>
-    <div class="screen_result"><span>=</span><span class="screen_result">20</span></div>
+    <div><span>=</span><span class="screen_result"></span></div>
   </section>
   <section class="calc buttons">
-    <button class="calc_clear"><span>C</span></button>
+    <button class="calc_clear" data-value="C"><span>C</span></button>
     <button class="calc_0 calc_namber" data-value="0"><span>0</span></button>
     <button class="calc_dot calc_namber" data-value="."><span>.</span></button>
     <button class="calc_addition calc_operation" data-value="+"><span>+</span></button>
